force-app/main/default/objects/Team__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Division this team belongs to</description>
    <label>Division</label>
    <referenceTo>Division__c</referenceTo>
    <relationshipLabel>Teams</relationshipLabel>
    <relationshipName>Teams</relationshipName>
    <type>Lookup</type>
</CustomField>