force-app/main/default/objects/Team__c/fields/Head_Coach__c.field-meta.xml
<CustomField>
    <fullName>Head_Coach__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Head coach for this team</description>
    <label>Head Coach</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Teams (Head Coach)</relationshipLabel>
    <relationshipName>Teams_Head_Coach</relationshipName>
    <type>Lookup</type>
</CustomField>