force-app/main/default/objects/Team__c/fields/Home_Arena__c.field-meta.xml
<CustomField>
    <fullName>Home_Arena__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Home arena for this team</description>
    <label>Home Arena</label>
    <referenceTo>Arena__c</referenceTo>
    <relationshipLabel>Teams</relationshipLabel>
    <relationshipName>Teams</relationshipName>
    <type>Lookup</type>
</CustomField>