force-app/main/default/objects/Team__c/fields/Team_Colors__c.field-meta.xml
<CustomField>
    <fullName>Team_Colors__c</fullName>
    <description>Team colors (e.g., Red and White)</description>
    <label>Team Colors</label>
    <length>100</length>
    <type>Text</type>
</CustomField>